# neural-browser

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cpu/: dom.rs  internal_pages.rs  js_engine.rs  mod.rs  network.rs  start_page.rs
src/css/: cascade.rs  mod.rs  parser.rs  selector.rs  tokenizer.rs  values.rs
src/eva/: local_model.rs  mod.rs  panel.rs
src/gpu/: image_shader.wgsl  layout.rs  mod.rs  rect_shader.wgsl  renderer.rs  rounded_rect_shader.wgsl  tabs.rs
src/memory/: mod.rs
src/npu/: classifier.rs  content.rs  mod.rs
src/ui/: mod.rs
