[package]
name = "neural-browser"
version = "0.1.0"
edition = "2021"
description = "Neural Browser — CPU + NPU + GPU working together"
license = "MIT"

[dependencies]
# ── CPU: Networking & Parsing ──
ureq = "3"  # default: rustls + webpki-roots + gzip
url = "2"

# ── GPU: Rendering via wgpu ──
wgpu = "24.0"
winit = "0.30"
glyphon = "0.8"              # GPU text rasterization
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
bytemuck = { version = "1", features = ["derive"] }

# ── Shared ──
pollster = "0.4"
crossbeam-channel = "0.5"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
anyhow = "1"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
